syntax = "proto3";

package envoy.extensions.filters.http.admission_control.v3alpha;

import "envoy/config/core/v3/base.proto";
import "envoy/type/v3/range.proto";

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";
import "google/rpc/status.proto";

import "udpa/annotations/migrate.proto";
import "udpa/annotations/status.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.http.admission_control.v3alpha";
option java_outer_classname = "AdmissionControlProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).work_in_progress = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Admission Control]
// [#extension: envoy.filters.http.admission_control]

message AdmissionControl {
  // Default method of specifying what constitutes a failed request. All status codes that
  // indicate a failed request must be explicitly specified if not relying on the default
  // values.
  message DefaultEvaluationCriteria {
    // If HTTP statuses are unspecified, defaults to 5xx.
    repeated type.v3.Int32Range http_status = 1;

    // GRPC status codes to consider as request successes. If unspecified, defaults to "OK".
    repeated uint32 grpc_status = 2;
  }

  // If set to false, the admission control filter will operate as a pass-through filter. If the
  // message is unspecified, the filter will be enabled.
  config.core.v3.RuntimeFeatureFlag enabled = 1;

  // Defines how a request is considered a success/failure.
  oneof evaluation_criteria {
    option (validate.required) = true;

    DefaultEvaluationCriteria default_eval_criteria = 2;
  }

  // The time window over which the success rate is calculated. The window is rounded to the nearest
  // second. Defaults to 120s.
  google.protobuf.Duration sampling_window = 3;

  // Rejection probability is defined by the formula::
  //
  //     max(0, (rq_count - aggression_coefficient * rq_success_count) / (rq_count + 1))
  //
  // The coefficient dictates how aggressively the admission controller will throttle requests as
  // the success rate drops. Lower values will cause throttling to kick in at higher success rates
  // and result in more aggressive throttling. Any values less than 1.0, will be set to 1.0. If the
  // message is unspecified, the coefficient is 2.0.
  config.core.v3.RuntimeDouble aggression_coefficient = 4;
}
